projects/camunda/op.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    cni.projectcalico.org/containerID: 9c2232f9d18f11b8dfde9c1e14fd09c9d3ecae1c7139f707df4b9ff11422ee5a
    cni.projectcalico.org/podIP: 192.168.162.144/32
    cni.projectcalico.org/podIPs: 192.168.162.144/32
    kubectl.kubernetes.io/default-container: optimize
    kubectl.kubernetes.io/default-logs-container: optimize
    prometheus.io/path: /stats/prometheus
    prometheus.io/port: "15020"
    prometheus.io/scrape: "true"
    sidecar.istio.io/status: '{"initContainers":["istio-init"],"containers":["istio-proxy"],"volumes":["workload-socket","credential-socket","workload-certs","istio-envoy","istio-data","istio-podinfo","istio-token","istiod-ca-cert"],"imagePullSecrets":null,"revision":"default"}'
  creationTimestamp: "2023-03-06T16:01:56Z"
  generateName: camunda-optimize-87b6fc6b-
  labels:
    app: camunda-platform
    app.kubernetes.io/component: optimize
    app.kubernetes.io/instance: camunda
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: optimize
    app.kubernetes.io/part-of: camunda-platform
    app.kubernetes.io/version: 3.9.3
    helm.sh/chart: optimize-8.1.5
    pod-template-hash: 87b6fc6b
    security.istio.io/tlsMode: istio
    service.istio.io/canonical-name: optimize
    service.istio.io/canonical-revision: 3.9.3
  name: camunda-optimize-87b6fc6b-gn8lw
  namespace: camunda
  ownerReferences:
  - apiVersion: apps/v1
    blockOwnerDeletion: true
    controller: true
    kind: ReplicaSet
    name: camunda-optimize-87b6fc6b
    uid: c96c79f7-be03-48ee-902c-e6d734d69261
  resourceVersion: "426986"
  uid: ceaa1d38-ba72-49c5-9473-95ebe1f556ac
spec:
  containers:
  - env:
    - name: CAMUNDA_OPTIMIZE_ZEEBE_ENABLED
      value: "true"
    - name: CAMUNDA_OPTIMIZE_ZEEBE_PARTITION_COUNT
      value: "3"
    - name: OPTIMIZE_ELASTICSEARCH_HOST
      value: elasticsearch-master
    - name: OPTIMIZE_ELASTICSEARCH_HTTP_PORT
      value: "9200"
    - name: SPRING_PROFILES_ACTIVE
      value: ccsm
    - name: CAMUNDA_OPTIMIZE_IDENTITY_ISSUER_URL
      value: http://localhost:18080/auth/realms/camunda-platform
    - name: CAMUNDA_OPTIMIZE_IDENTITY_ISSUER_BACKEND_URL
      value: http://camunda-keycloak:80/auth/realms/camunda-platform
    - name: CAMUNDA_OPTIMIZE_IDENTITY_CLIENTID
      value: optimize
    - name: CAMUNDA_OPTIMIZE_IDENTITY_CLIENTSECRET
      valueFrom:
        secretKeyRef:
          key: optimize-secret
          name: camunda-optimize-identity-secret
    - name: CAMUNDA_OPTIMIZE_IDENTITY_AUDIENCE
      value: optimize-api
    - name: CAMUNDA_OPTIMIZE_API_AUDIENCE
      value: optimize-api
    - name: SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_JWK_SET_URI
      value: http://camunda-keycloak:80/auth/realms/camunda-platform/protocol/openid-connect/certs
    - name: CAMUNDA_OPTIMIZE_SECURITY_AUTH_COOKIE_SAME_SITE_ENABLED
      value: "false"
    - name: CAMUNDA_OPTIMIZE_UI_LOGOUT_HIDDEN
      value: "true"
    image: camunda/optimize:3.9.3
    imagePullPolicy: IfNotPresent
    name: optimize
    ports:
    - containerPort: 8090
      name: http
      protocol: TCP
    - containerPort: 8092
      name: management
      protocol: TCP
    resources:
      limits:
        cpu: "2"
        memory: 2Gi
      requests:
        cpu: 600m
        memory: 1Gi
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: kube-api-access-zkllx
      readOnly: true
  - args:
    - proxy
    - sidecar
    - --domain
    - $(POD_NAMESPACE).svc.cluster.local
    - --proxyLogLevel=warning
    - --proxyComponentLogLevel=misc:error
    - --log_output_level=default:info
    - --concurrency
    - "2"
    image: docker.io/istio/proxyv2:1.17.1
    imagePullPolicy: IfNotPresent
    name: istio-proxy
    ports:
    - containerPort: 15090
      name: http-envoy-prom
      protocol: TCP
    readinessProbe:
      failureThreshold: 30
      httpGet:
        path: /healthz/ready
        port: 15021
        scheme: HTTP
      initialDelaySeconds: 1
      periodSeconds: 2
      successThreshold: 1
      timeoutSeconds: 3
    resources:
      limits:
        cpu: "2"
        memory: 1Gi
      requests:
        cpu: 100m
        memory: 128Mi
    securityContext:
      allowPrivilegeEscalation: false
      capabilities:
        drop:
        - ALL
      privileged: false
      readOnlyRootFilesystem: true
      runAsGroup: 1337
      runAsNonRoot: true
      runAsUser: 1337
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /var/run/secrets/workload-spiffe-uds
      name: workload-socket
    - mountPath: /var/run/secrets/credential-uds
      name: credential-socket
    - mountPath: /var/run/secrets/workload-spiffe-credentials
      name: workload-certs
    - mountPath: /var/run/secrets/istio
      name: istiod-ca-cert
    - mountPath: /var/lib/istio/data
      name: istio-data
    - mountPath: /etc/istio/proxy
      name: istio-envoy
    - mountPath: /var/run/secrets/tokens
      name: istio-token
    - mountPath: /etc/istio/pod
      name: istio-podinfo
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: kube-api-access-zkllx
      readOnly: true
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  nodeName: kind-worker
  preemptionPolicy: PreemptLowerPriority
  priority: 0
  restartPolicy: Always
  schedulerName: default-scheduler
  securityContext: {}
  serviceAccount: default
  serviceAccountName: default
  terminationGracePeriodSeconds: 30
  tolerations:
  - effect: NoExecute
    key: node.kubernetes.io/not-ready
    operator: Exists
    tolerationSeconds: 300
  - effect: NoExecute
    key: node.kubernetes.io/unreachable
    operator: Exists
    tolerationSeconds: 300
  volumes:
  - emptyDir: {}
    name: workload-socket
  - emptyDir: {}
    name: credential-socket
  - emptyDir: {}
    name: workload-certs
  - emptyDir:
      medium: Memory
    name: istio-envoy
  - emptyDir: {}
    name: istio-data
  - downwardAPI:
      defaultMode: 420
      items:
      - fieldRef:
          apiVersion: v1
          fieldPath: metadata.labels
        path: labels
      - fieldRef:
          apiVersion: v1
          fieldPath: metadata.annotations
        path: annotations
    name: istio-podinfo
  - name: istio-token
    projected:
      defaultMode: 420
      sources:
      - serviceAccountToken:
          audience: istio-ca
          expirationSeconds: 43200
          path: istio-token
  - configMap:
      defaultMode: 420
      name: istio-ca-root-cert
    name: istiod-ca-cert
  - name: kube-api-access-zkllx
    projected:
      defaultMode: 420
      sources:
      - serviceAccountToken:
          expirationSeconds: 3607
          path: token
      - configMap:
          items:
          - key: ca.crt
            path: ca.crt
          name: kube-root-ca.crt
      - downwardAPI:
          items:
          - fieldRef:
              apiVersion: v1
              fieldPath: metadata.namespace
            path: namespace
status:
  conditions:
  - lastProbeTime: null
    lastTransitionTime: "2023-03-06T16:02:00Z"
    status: "True"
    type: Initialized
  - lastProbeTime: null
    lastTransitionTime: "2023-03-15T18:15:43Z"
    status: "True"
    type: Ready
  - lastProbeTime: null
    lastTransitionTime: "2023-03-15T18:15:43Z"
    status: "True"
    type: ContainersReady
  - lastProbeTime: null
    lastTransitionTime: "2023-03-06T16:01:56Z"
    status: "True"
    type: PodScheduled
  containerStatuses:
  - containerID: containerd://41a56455bf474d6c7b4f68351d1771712a1677e791a7f8310454c2f0e8185fc5
    image: docker.io/istio/proxyv2:1.17.1
    imageID: docker.io/istio/proxyv2@sha256:2152aea5fbe2de20f08f3e0412ad7a4cd54a492240ff40974261ee4bdb43871d
    lastState:
      terminated:
        containerID: containerd://488c62789e12a67e63035882da73b92f7961ddf8348251491df6304ed98e8bd9
        exitCode: 255
        finishedAt: "2023-03-15T18:14:11Z"
        reason: Unknown
        startedAt: "2023-03-14T14:50:21Z"
    name: istio-proxy
    ready: true
    restartCount: 8
    started: true
    state:
      running:
        startedAt: "2023-03-15T18:14:39Z"
  - containerID: containerd://cad73fa9b784f07acde1ba8b7117aaae5ac4fcf345665decc2e473bd3183beb4
    image: docker.io/camunda/optimize:3.9.3
    imageID: docker.io/camunda/optimize@sha256:16d2a10b22db6859c4ee69d615446c7a605b6459b9be4087e50d8e8ec2edbae2
    lastState:
      terminated:
        containerID: containerd://bbd133d78471fd3cfe2d725f6aaf1d77e95060ea15fab3f1d4463b63850e3823
        exitCode: 255
        finishedAt: "2023-03-15T18:14:11Z"
        reason: Unknown
        startedAt: "2023-03-14T14:50:21Z"
    name: optimize
    ready: true
    restartCount: 8
    started: true
    state:
      running:
        startedAt: "2023-03-15T18:14:39Z"
  hostIP: 172.18.0.2
  initContainerStatuses:
  - containerID: containerd://e84be7d08e8d34b84679f1a5996e367e5b58cac1f67196795f407134977ef96f
    image: docker.io/istio/proxyv2:1.17.1
    imageID: docker.io/istio/proxyv2@sha256:2152aea5fbe2de20f08f3e0412ad7a4cd54a492240ff40974261ee4bdb43871d
    lastState: {}
    name: istio-init
    ready: true
    restartCount: 8
    state:
      terminated:
        containerID: containerd://e84be7d08e8d34b84679f1a5996e367e5b58cac1f67196795f407134977ef96f
        exitCode: 0
        finishedAt: "2023-03-15T18:14:38Z"
        reason: Completed
        startedAt: "2023-03-15T18:14:38Z"
  phase: Running
  podIP: 192.168.162.144
  podIPs:
  - ip: 192.168.162.144
  qosClass: Burstable
  startTime: "2023-03-06T16:01:56Z"
