projects/camunda/zeebe-gateway.yaml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: zeebe-gateway-request-auth
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: zeebe-gateway
  jwtRules:
  - issuer: "http://camunda-keycloak:80/realms/master"
    jwksUri: "http://camunda-keycloak:80/realms/master/protocol/openid-connect/certs"

---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: zeebe-gateway-auth-policy
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: zeebe-gateway
  rules:
  - from:
    - source:
        requestPrincipals: ["*"]
